Change to use valueOf instead of depreciated method. Fixes #47